fixes on mobile phone component

--- a/src/components/contact-sticky-note/contact-sticky-note.css
+++ b/src/components/contact-sticky-note/contact-sticky-note.css
@@ -48,7 +48,8 @@
   color: #0f43f8;
   font-family: "Gochi Hand", cursive;
   font-weight: 400;
-  font-style: normal;
+    position: relative;
+    bottom: 15px;
   @media (max-width: 600px) {
     font-size: 16px;
   }
