--- a/src/components/mobile-phone/mobile-phone.css
+++ b/src/components/mobile-phone/mobile-phone.css
@@ -22,7 +22,6 @@
   border-radius: 25px;
   padding-top: 20px;
 }
-
 .phone-buttons-container {
   display: flex;
   flex-direction: row;
@@ -33,6 +32,12 @@
   margin-bottom: auto;
   margin-left: 2em;
   margin-right: 2em;
+}
+.responsive-image.statusbar{
+  margin: 0px;
+  margin: auto;
+    position: absolute;
+    top: 20px;
 }
 
 @media (max-width: 700px) {
