--- a/src/components/phone-button/phone-button.css
+++ b/src/components/phone-button/phone-button.css
@@ -28,6 +28,8 @@ a{
 .button-text {
   font-size: 16px;
   font-weight: bold;
+  color: #fff;
+  display: none;
 }
 @media (max-width: 700px){
   .icon-button {
